<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AppInfo</string>

    <string name="str_navigation_drawer_open">Open navigation drawer</string>
    <string name="str_navigation_drawer_close">Close navigation drawer</string>

    <string name="str_user_apps">My Apps</string>
    <string name="str_system_apps">System Apps</string>
    <string name="str_phone_info">Phone Info</string>
    <string name="str_screen_info">Screen Info</string>
    <string name="str_query_apk">scanning apk</string>
    <string name="str_get_appinfo_fail">Get app info fail</string>
    <string name="str_get_apkinfo_fail">Get apk info fail</string>
    <string name="str_input_packname_aname_query">input pack/app name query</string>
    <string name="str_search_noresult_tips">Not found and %s related results</string>
    <string name="str_search_noresult_tips_1">Not found related results</string>

    <string name="str_application_sort">Application sort</string>
    <string name="str_get_apps_tips">get apps list</string>
    <string name="str_query_file_tips">scanning file</string>
    <string name="str_app_tips">Phone、App Info List, And support export、copy share...</string>

    <string name="str_other">Other</string>
    <string name="str_cancel">cancel</string>
    <string name="str_add">add</string>
    <string name="str_close">close</string>
    <string name="str_setting">Setting</string>
    <string name="str_open_app">open app</string>
    <string name="str_uninstall">uninstall</string>
    <string name="str_install_app">install app</string>
    <string name="str_delete_apk_file">delete apk</string>
    <string name="str_app_market">App Market</string>
    <string name="str_goto_app_market">goto app market</string>
    <string name="str_app_details_setting">app settings details</string>
    <string name="str_goto_app_details_setting">goto app settings details</string>
    <string name="str_notfound">There\'s nothing here~~~</string>
    <string name="str_click_return">Click To Return</string>
    <string name="str_reset_dfsetting">Reset settings</string>
    <string name="str_reset_dfsetting_tips">restore the application default settings</string>
    <string name="str_scan_apk">scanning apk</string>
    <string name="str_scan_apk_tips">set scan apk file, the suffix field</string>
    <string name="str_manage_storage">manage external storage</string>
    <string name="str_manage_storage_enable">enable manage external storage permission</string>
    <string name="str_manage_storage_disable">disable manage external storage permission</string>
    <string name="str_setting_scan_suffix_suc">set suc, If need to be re scanned, Please click refresh</string>
    <string name="str_search">search</string>
    <string name="str_set_query_apk_suffix">set query suffix</string>
    <string name="str_set_query_apk_suffix_hint">set query suffix(No need to add .)</string>

    <string name="str_empty" />
    <string name="str_copy_suc">copy suc</string>
    <string name="str_export_suc">export suc</string>
    <string name="str_export_fail">export fail</string>
    <string name="str_share_fail">share fail</string>
    <string name="str_export_ing">exporting</string>
    <string name="str_operate_fail">operate fail</string>
    <string name="str_export_app_msg">export app info</string>
    <string name="str_export_apk_msg">export apk info</string>
    <string name="str_export">export</string>
    <string name="str_export_app">export app</string>
    <string name="str_export_apk">export apk</string>
    <string name="str_share">share</string>
    <string name="str_refresh">refresh</string>
    <string name="str_file_exist">file already exists</string>
    <string name="str_file_not_exist">file not exist</string>
    <string name="str_app_not_exist">app not exist</string>
    <string name="str_delete_suc">delete suc</string>
    <string name="str_reset_desetting_suc">reset df setting suc</string>
    <string name="str_install_fail">install fail</string>
    <string name="str_install_request_tips">Please select application and allow installation permission.</string>
    <string name="str_read_write_request_tips">Please pass the read-write permission.</string>

    <string name="str_info_model">Phone model</string>
    <string name="str_info_manufacturer">Manufacturer</string>
    <string name="str_info_brand">Brand</string>
    <string name="str_info_android_version">Android release</string>
    <string name="str_info_screen">Screen inch</string>
    <string name="str_info_screen_size">Screen size</string>
    <string name="str_info_sdcard_total">SDCard total</string>
    <string name="str_info_sdcard_available">SDCard available</string>
    <string name="str_info_memory_total">Memory total</string>
    <string name="str_info_memory_available">Memory available</string>
    <string name="str_info_display">Device display</string>
    <string name="str_info_id">Device ID</string>
    <string name="str_info_device">Device</string>
    <string name="str_info_baseband_version">Baseband version</string>
    <string name="str_info_linuxcode_version">LinuxCode version</string>
    <string name="str_info_cpu">CPUInfo</string>
    <string name="str_info_cpu_abi1">CPU ABI1</string>
    <string name="str_info_cpu_abi2">CPU ABI2</string>
    <string name="str_info_cpu_max">CPU Max Freq</string>
    <string name="str_info_cpu_min">CPU Min Freq</string>
    <string name="str_info_cpu_cur">CPU Cur Freq</string>
    <string name="str_info_cpu_number">CPU Number</string>
    <string name="str_info_serial">Serial</string>
    <string name="str_info_fingerprint">Fingerprint</string>
    <string name="str_info_board">Board</string>
    <string name="str_info_hardware">Hardware</string>
    <string name="str_info_product">Product</string>
    <string name="str_info_is_emulator">IS Emulator</string>
    <string name="str_info_is_debuggable">IS Debuggable</string>
    <string name="str_info_supported_abis">Supported abis</string>

    <string name="str_info_height_pixels">Height Pixels</string>
    <string name="str_info_width_pixels">Width Pixels</string>
    <string name="str_info_xdpi">X Dpi</string>
    <string name="str_info_ydpi">Y Dpi</string>
    <string name="str_info_density">Density</string>
    <string name="str_info_density_dpi">Density Dpi</string>
    <string name="str_info_scaled_density">Scaled Density</string>
    <string name="str_info_height_dpi">Height Dpi</string>
    <string name="str_info_width_dpi">Width Dpi</string>
    <string name="str_info_convert_dpi">Convert Dpi</string>
</resources>