<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/vid_nav_user_apps"
            android:icon="@drawable/icon_user_app"
            android:title="@string/str_user_apps" />

        <item
            android:id="@+id/vid_nav_system_apps"
            android:icon="@drawable/icon_system_app"
            android:title="@string/str_system_apps" />

        <item
            android:id="@+id/vid_nav_phone_info"
            android:icon="@drawable/icon_phone_info"
            android:title="@string/str_phone_info" />

        <item
            android:id="@+id/vid_nav_screen_info"
            android:icon="@drawable/icon_screen_info"
            android:title="@string/str_screen_info" />

        <item
            android:id="@+id/vid_nav_query_apk"
            android:icon="@drawable/icon_query_apk"
            android:title="@string/str_query_apk" />
    </group>

    <item android:title="@string/str_other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/vid_nav_setting"
                    android:icon="@drawable/icon_action_setting"
                    android:title="@string/str_setting" />
            </group>
        </menu>
    </item>
</menu>