<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fadingEdge="none"
    android:fitsSystemWindows="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.Base_TextView"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_1"
            android:text="@string/str_setting"
            android:textColor="@color/color_359AFF"
            android:textSize="@dimen/sp_15" />

        <LinearLayout
            android:id="@+id/vid_appsort_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_item_r3"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_18"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_15">

            <TextView
                style="@style/AppTheme.Base_TextView"
                android:text="@string/str_application_sort"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/vid_appsort_tv"
                style="@style/AppTheme.Base_TextView"
                android:layout_marginTop="@dimen/dp_3"
                android:textColor="@color/color_808080"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vid_scanapk_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_item_r3"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_18"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_15">

            <TextView
                style="@style/AppTheme.Base_TextView"
                android:text="@string/str_scan_apk"
                android:textSize="@dimen/sp_16" />

            <TextView
                style="@style/AppTheme.Base_TextView"
                android:layout_marginTop="@dimen/dp_3"
                android:text="@string/str_scan_apk_tips"
                android:textColor="@color/color_808080"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vid_storage_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_item_r3"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_18"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_15">

            <TextView
                style="@style/AppTheme.Base_TextView"
                android:text="@string/str_manage_storage"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/vid_storage_tv"
                style="@style/AppTheme.Base_TextView"
                android:layout_marginTop="@dimen/dp_3"
                android:text="@string/str_manage_storage_enable"
                android:textColor="@color/color_808080"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <TextView
            style="@style/AppTheme.Base_TextView"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_1"
            android:text="@string/str_other"
            android:textColor="@color/color_359AFF"
            android:textSize="@dimen/sp_15" />

        <LinearLayout
            android:id="@+id/vid_reset_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_item_r3"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_18"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_15">

            <TextView
                style="@style/AppTheme.Base_TextView"
                android:text="@string/str_reset_dfsetting"
                android:textSize="@dimen/sp_16" />

            <TextView
                style="@style/AppTheme.Base_TextView"
                android:layout_marginTop="@dimen/dp_3"
                android:text="@string/str_reset_dfsetting_tips"
                android:textColor="@color/color_808080"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>