<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_app_sort"
            android:orientation="vertical"
            android:padding="@dimen/dp_15">

            <TextView
                style="@style/AppTheme.Base_TextView"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/str_set_query_apk_suffix"
                android:textSize="@dimen/sp_18" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_17"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.Base_TextView"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="xxx."
                    android:textSize="@dimen/sp_14" />

                <EditText
                    android:id="@+id/vid_query_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_5"
                    android:hint="@string/str_set_query_apk_suffix_hint"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:singleLine="true"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/vid_add_tv"
                    style="@style/AppTheme.Base_TextView"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_8"
                    android:paddingRight="@dimen/dp_15"
                    android:paddingBottom="@dimen/dp_5"
                    android:text="@string/str_add"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/vid_cancel_tv"
                    style="@style/AppTheme.Base_TextView"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_8"
                    android:paddingRight="@dimen/dp_15"
                    android:paddingBottom="@dimen/dp_5"
                    android:text="@string/str_cancel"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>